welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:16: error: type mismatch;
 found   : Unit
 required: Boolean
		return;
                ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
	for (c <- 0 to 6)
               ^